# netmon

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: windows.yml
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/metrics/: cpu.rs  gpu.rs  memory.rs  mod.rs  network.rs
src/lib/: metrics.ts
src/lib/components/: CpuChart.svelte  GpuChart.svelte  MemoryChart.svelte  MetricsDashboard.svelte  NetworkChart.svelte
src/routes/: +page.svelte
