[package]
name = "netmon"
version = "0.1.0"
description = "Network Monitor Menu Bar App"
authors = ["Andreas"]
edition = "2021"

[lib]
name = "netmon_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.32"
tokio = { version = "1", features = ["time"] }
